--- a/index.html
+++ b/index.html
@@ -223,10 +223,9 @@
             </form>
 
             <div class="social-icons">
-                <a href="https://github.com" class="social-btn"><i class="fab fa-github"></i></a>
-                <a href="https://linkedin.com" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://instagram.com" class="social-btn"><i class="fab fa-instagram"></i></a>
-                <a href="https://youtube.com" class="social-btn"><i class="fab fa-youtube"></i></a>
+                <a href="https://github.com/devdanielfortes" class="social-btn"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/danielfortesdev" class="social-btn"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@danielfortesyt" class="social-btn"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </section>
