Adicionado Stack Java

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                         <div class="progress-bar"><div class="progress" data-width="40%"></div></div>
                     </div>
                     <div class="skill-item">
-                        <div class="skill-info"><span>React.js</span><span>15%</span></div>
-                        <div class="progress-bar"><div class="progress" data-width="15%"></div></div>
+                        <div class="skill-info"><span>Java</span><span>10%</span></div>
+                        <div class="progress-bar"><div class="progress" data-width="10%"></div></div>
                     </div>
                 </div>
 
