Alterações em projetos

--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-img">
+                    <img src="src/img/tripverse.png" alt="TripVerse">
+                </div>
+                <div class="project-info">
+                    <h3>TripVerse</h3>
+                    <p>Simulação de Vendas de Viagens.</p>
+                    <a href="https://devdanielfortes.github.io/tripverse-viagem/" target="_blank" style="color:var(--primary); text-decoration: none;">Ver Detalhes &rarr;</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
                     <img src="src/img/danfor-store.png" alt="DanFor Store">
                 </div>
                 <div class="project-info">
@@ -235,7 +245,7 @@
     </div>
 
     <footer style="text-align: center; padding: 20px; color: var(--text-muted); font-size: 0.9rem;">
-        &copy; 2025. Desenvolvido com Paixão e Código - Daniel Fortes.
+        &copy; 2026. Desenvolvido com Paixão e Código - Daniel Fortes.
     </footer>
 
     <script src="src/js/script.js"></script>
