--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-img">
+                    <img src="src/img/iphone17.png" alt="TripVerse">
+                </div>
+                <div class="project-info">
+                    <h3>iPhone 17</h3>
+                    <p>Exibição do iPhone 17.</p>
+                    <a href="https://devdanielfortes.github.io/apresentacao-iphone17/" target="_blank" style="color:var(--primary); text-decoration: none;">Ver Detalhes &rarr;</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
                     <img src="src/img/tripverse.png" alt="TripVerse">
                 </div>
                 <div class="project-info">
