--- a/index.html
+++ b/index.html
@@ -88,12 +88,22 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-img">
-                    <img src="src/img/iphone17.png" alt="TripVerse">
+                    <img src="src/img/iphone17.png" alt="iPhone 17">
                 </div>
                 <div class="project-info">
                     <h3>iPhone 17</h3>
                     <p>Exibição do iPhone 17.</p>
                     <a href="https://devdanielfortes.github.io/apresentacao-iphone17/" target="_blank" style="color:var(--primary); text-decoration: none;">Ver Detalhes &rarr;</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
+                    <img src="src/img/hamburgueria.png" alt="Hamburgueria">
+                </div>
+                <div class="project-info">
+                    <h3>Hamburgueria</h3>
+                    <p>Site destinado a Hamburgueria com API de CEP e WhatsApp</p>
+                    <a href="https://devdanielfortes.github.io/hamburgueria/" target="_blank" style="color:var(--primary); text-decoration: none;">Ver Detalhes &rarr;</a>
                 </div>
             </div>
             <div class="project-card">
